Fixed some UI bugs & did some readability refactoring

--- a/src/components/Stream/StreamElement/CommentSection/CommentForm/CommentForm.module.css
+++ b/src/components/Stream/StreamElement/CommentSection/CommentForm/CommentForm.module.css
@@ -1,6 +1,6 @@
 .CommentForm{
     position: relative;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 .CommentInput {
